--- a/server/index.html
+++ b/server/index.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class="card">
-                <h3 class="card-header">GET /yelp//:location</h3>
+                <h3 class="card-header">GET /yelp/:location</h3>
                 <div class="card-block">
                     <h4 class='card-title'>Grabs neraby restaurants that are delivering at the time of the query.</h4>
                     <p class="card-text">Needs a location passed along.</p>
